# Code-Quality-Review-AI

./: requirements.txt
backend/extracted/smartERP/smartERP/backend/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/extracted/smartERP/smartERP/backend/alembic/: env.py  script.py.mako
backend/extracted/smartERP/smartERP/backend/alembic/versions/: 20240628_create_companies_table.py  cc7d65f8cd82_create_users_table.py
backend/extracted/smartERP/smartERP/backend/app/: main.py
backend/extracted/smartERP/smartERP/backend/app/api/v1/: auth.py  company.py  router.py
backend/extracted/smartERP/smartERP/backend/app/api/v1/endpoints/: __init__.py  health.py  root.py
backend/extracted/smartERP/smartERP/backend/app/auth/: security.py
backend/extracted/smartERP/smartERP/backend/app/config/: settings.py
backend/extracted/smartERP/smartERP/backend/app/core/: __init__.py  config.py
backend/extracted/smartERP/smartERP/backend/app/database/: __init__.py  base.py  dependencies.py  engine.py  session.py
backend/extracted/smartERP/smartERP/backend/app/dependencies/: __init__.py
backend/extracted/smartERP/smartERP/backend/app/exceptions/: __init__.py
backend/extracted/smartERP/smartERP/backend/app/models/: __init__.py  company.py  user.py
backend/extracted/smartERP/smartERP/backend/app/repositories/: company_repository.py  user_repository.py
backend/extracted/smartERP/smartERP/backend/app/schemas/: company.py  user.py
backend/extracted/smartERP/smartERP/backend/app/services/: auth_service.py  company_service.py
(+68 files in other folders)
